# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md  comp_run.sh  compile.sh  run.sh  tic-tac-toe  tic-tac-toe.sh  unit-test.sh
execs/: tic-tac-toe  unit_tests
include/: board.h  bot.h  fileManager.h  game.h  interface.h  move.h
src/: board.cpp  bot.cpp  fileManager.cpp  game.cpp  interface.cpp  main.cpp  move.cpp
test/: test.cpp
